# Hermes

./: README.md  package-lock.json  package.json
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: connect.rs  find_ip_address.rs  lib.rs  main.rs  my_custom_command.rs
src/components/: Navbar.jsx  recieve_screen.jsx  share_button.jsx
